--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,11 +14,11 @@ spring.jpa.hibernate.ddl-auto =update
 
 spring.redis.host=localhost
 spring.redis.port=6379
-
-#mailing settings
-  spring.mail.host=smtp.gmail.com
-  spring.mail.port=587
-  spring.mail.username=the07guy@gmail.com
-  spring.mail.password=ausqclosjelcejza
-  spring.mail.properties.mail.smtp.auth=true
-  spring.mail.properties.mail.smtp.starttls.enable=true
+#
+##mailing settings
+#  spring.mail.host=smtp.gmail.com
+#  spring.mail.port=587
+#  spring.mail.username=the07guy@gmail.com
+#  spring.mail.password=ausqclosjelcejza
+#  spring.mail.properties.mail.smtp.auth=true
+#  spring.mail.properties.mail.smtp.starttls.enable=true
